[package]
name = "api-data-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.23", features = ["serde"]}
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "mysql", "uuid", "chrono"]}